--- a/client/src/app.css
+++ b/client/src/app.css
@@ -8,7 +8,10 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    margin-top: 30px;
+    padding-top: 30px;
+    background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/disp/1ce52173426833.5c08f56353039.png);
+    width: 100vw;
+    height: 100vw;
 }
 
 .form {
@@ -18,6 +21,8 @@
     border: 2px solid teal;
     display: flex;
     flex-direction: column;
+    background-color: rgba(128,128,128, 0.5);
+    height: fit-content;
 }
 
 .form input {
@@ -25,6 +30,7 @@
     width: 100%;
     padding: 5px 10px;
     border: teal 1px solid;
+    background-color: azure;
 }
 
 .form button {
@@ -36,6 +42,7 @@
     font-weight: bold;
     color: teal;
     cursor: pointer;
+    background-color: azure;
 }
 
 .form button:focus, .form input:focus {
@@ -53,5 +60,6 @@
     border-radius: 8px;
     padding: 15px;
     margin-top: 15px;
+    background-color: azure;
 }
 
